@@ -957,6 +957,8 @@ class DataBlockScanner implements Runnable {
   }
   
   public static class Servlet extends HttpServlet {
+    private static final long serialVersionUID = 1L;
+
     public void doGet(HttpServletRequest request, 
                       HttpServletResponse response) throws IOException {
       
